kubernetes/5_synapse_workers/16_media_worker/1_statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: media-workers
  namespace: synapse
  labels:
    app: media-workers
spec:
  serviceName: media-workers
  replicas: 4
  selector:
    matchLabels:
      app: media-workers
  template:
    metadata:
      labels:
        app: media-workers
    spec:
      securityContext:
        runAsUser: 1001
        runAsGroup: 1001
        fsGroup: 1001
      volumes:
        - name: scripts-volume
          configMap:
            name: media-worker-config
            defaultMode: 0555
        - name: worker-config-volume
          emptyDir: {}
        - name: synapse-config-volume
          configMap:
            name: synapse-config
        - name: media-volume
          persistentVolumeClaim:
            claimName: synapse-media
      containers:
      - name: synapse
        image: matrixdotorg/synapse:v1.74.0
        args: ["run", "--config-path=/data/homeserver.yaml", "--config-path=/data/worker/worker.yaml"]
        ports:
        - name: http
          containerPort: 8085
        - name: metrics
          containerPort: 9090
        volumeMounts:
          - name: synapse-config-volume
            mountPath: /data/homeserver.yaml
            subPath: homeserver.yaml
          - name: synapse-config-volume
            mountPath: /data/log.config
            subPath: log.config
          - name: synapse-config-volume
            mountPath: /data/signing.key
            subPath: signing.key
          - name: worker-config-volume
            mountPath: /data/worker
          - name: media-volume
            mountPath: /data/media_store
        readinessProbe:
          httpGet:
            path: /health
            port: 8085
