kubernetes/5_synapse_workers/16_media_worker/2_service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: media-workers
  namespace: synapse
spec:
  selector:
    app: media-workers
  ports:
    - name: http
      port: 8085
      targetPort: 8085
    - name: metrics
      port: 9090
      targetPort: 9090
